// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STextArea doesnt change value when inactive 1`] = `
<div class="s-text-area s-input s-input--inactive" style="height: 5em;"><span class="s-input__label">Text Area</span>
  <div class="s-input__textarea__wrapper--with-label"><textarea disabled="disabled" class="s-input__input s-input__textarea"></textarea></div>
</div>
`;

exports[`STextArea doesnt change value when read only 1`] = `
<div class="s-text-area s-input" style="height: 5em;"><span class="s-input__label s-input__label--aside">Text Area</span>
  <div class="s-input__textarea__wrapper--with-label"><textarea readonly="readonly" class="s-input__input s-input__textarea"></textarea></div>
</div>
`;

exports[`STextArea renders empty text field 1`] = `
<div class="s-text-area s-input" style="height: 5em;"><span class="s-input__label">Text Area</span>
  <div class="s-input__textarea__wrapper--with-label"><textarea class="s-input__input s-input__textarea"></textarea></div>
</div>
`;

exports[`STextArea renders text field with text 1`] = `
<div class="s-text-area s-input" style="height: 5em;"><span class="s-input__label s-input__label--aside">Text Area</span>
  <div class="s-input__textarea__wrapper--with-label"><textarea class="s-input__input s-input__textarea"></textarea></div>
</div>
`;
